Include the changes from bulk.yml

--- a/screenA/idr0017-screenA-bulk.yml
+++ b/screenA/idr0017-screenA-bulk.yml
@@ -1,4 +1,12 @@
 ---
+continue: "true"
+transfer: "ln_s"
+exclude: "clientpath"
+checksum_algorithm: "File-Size-64"
+logprefix: "logs/"
+output: "yaml"
+columns:
+    - name
+    - path
 target: "Screen:name:idr0017-breinig-drugscreen/screenA"
-include: "../../bulk.yml"
 path: "idr0017-screenA-plates.tsv"
