--- a/screenA/idr0017-screenA-bulk.yml
+++ b/screenA/idr0017-screenA-bulk.yml
@@ -4,9 +4,11 @@ transfer: "ln_s"
 exclude: "clientpath"
 checksum_algorithm: "File-Size-64"
 logprefix: "logs/"
+skip: "minmax"
 output: "yaml"
 columns:
     - name
     - path
+parallel_upload: "20"
 target: "Screen:name:idr0017-breinig-drugscreen/screenA"
 path: "idr0017-screenA-plates.tsv"
