--- a/screenA/idr0017-screenA-bulk.yml
+++ b/screenA/idr0017-screenA-bulk.yml
@@ -2,13 +2,12 @@
 continue: "true"
 transfer: "ln_s"
 exclude: "clientpath"
-checksum_algorithm: "File-Size-64"
 logprefix: "logs/"
-skip: "minmax"
+skip: "all"
 output: "yaml"
 columns:
     - name
     - path
-parallel_upload: "20"
+parallel_upload: "50"
 target: "Screen:name:idr0017-breinig-drugscreen/screenA"
 path: "idr0017-screenA-plates.tsv"
